Add display logic

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="container">
-            <div class="display">This is the display</div>
+            <div class="display">0</div>
             <div class="first row">
                 <button id="point" class="button">.</button>
                 <button id="divide" class="button">/</button>
