Add skeleton for main logic, variables.
Seperate buttons by function, add classses to buttons
depending on function, add basic logic to each class event
listener methd.

--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
         <div class="container">
             <div class="display">0</div>
             <div class="first row">
-                <button id="point" class="button">.</button>
-                <button id="divide" class="button">/</button>
-                <button id="exponentiate" class="button">^</button>
-                <button id="modulus" class="button">%</button>
+                <button id="point" class="button point">.</button>
+                <button id="divide" class="button operation">/</button>
+                <button id="exponentiate" class="button operation">^</button>
+                <button id="modulus" class="button operation">%</button>
             </div>
             <div class="second row">
-                <button id="1" class="button">1</button>
-                <button id="2" class="button">2</button>
-                <button id="3" class="button">3</button>
-                <button id="add" class="button">+</button>
+                <button id="1" class="button number">1</button>
+                <button id="2" class="button number">2</button>
+                <button id="3" class="button number">3</button>
+                <button id="add" class="button operation">+</button>
             </div>
             <div class="third row">
-                <button id="4" class="button">4</button>
-                <button id="5" class="button">5</button>
-                <button id="6" class="button">6</button>
-                <button id="subtract" class="button">-</button>
+                <button id="4" class="button number">4</button>
+                <button id="5" class="button number">5</button>
+                <button id="6" class="button number">6</button>
+                <button id="subtract" class="button operation">-</button>
             </div>
             <div class="fourth row">
-                <button id="7" class="button">7</button>
-                <button id="8" class="button">8</button>
-                <button id="9" class="button">9</button>
-                <button id="muliply" class="button">X</button>
+                <button id="7" class="button number">7</button>
+                <button id="8" class="button number">8</button>
+                <button id="9" class="button number">9</button>
+                <button id="muliply" class="button operation">X</button>
             </div>
             <div class="fifth row">
-                <button id="C" class="button">C</button>
-                <button id="0" class="button">0</button>
-                <button id="AC" class="button">AC</button>
-                <button id="equals" class="button">=</button>
+                <button id="C" class="button function">C</button>
+                <button id="0" class="button number">0</button>
+                <button id="AC" class="button function">AC</button>
+                <button id="equals" class="button equals">=</button>
             </div>
         </div>
     </body>
